--- a/index.html
+++ b/index.html
@@ -15,29 +15,26 @@
 
     <body>
         <header>
-
-            <div style="background-color: #ccc; padding: 8px; border-radius: 4px;" onclick="openModal('#stats')"><i class="bi bi-bar-chart-line-fill"></i></div>
+            <div class="top-btn" onclick="openModal('#stats')"><i class="bi bi-bar-chart-line-fill"></i></div>
             <h1 class="title">LETRUX</h1>
-            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#howToPlay">
-                <i class="bi bi-question-circle"></i>
-            </button>
+            <div class="top-btn" onclick="openModal('#howToPlay')"><i class="bi bi-question-lg"></i></div>
         </header>
 
         <main>
 
             <div class="game-board">
 
-                <div id="1-1" class="letra-1"></div>
-                <div id="1-2" class="letra-1"></div>
-                <div id="1-3" class="letra-1"></div>
-                <div id="1-4" class="letra-1"></div>
-                <div id="1-5" class="letra-1"></div>
+                <div id="1-1" class="letra-1" onclick=""></div>
+                <div id="1-2" class="letra-1" onclick=""></div>
+                <div id="1-3" class="letra-1" onclick=""></div>
+                <div id="1-4" class="letra-1" onclick=""></div>
+                <div id="1-5" class="letra-1" onclick=""></div>
 
-                <div id="2-1" class="letra-2"></div>
-                <div id="2-2" class="letra-2"></div>
-                <div id="2-3" class="letra-2"></div>
-                <div id="2-4" class="letra-2"></div>
-                <div id="2-5" class="letra-2"></div>
+                <div id="2-1" class="letra-2" onclick=""></div>
+                <div id="2-2" class="letra-2" onclick=""></div>
+                <div id="2-3" class="letra-2" onclick=""></div>
+                <div id="2-4" class="letra-2" onclick=""></div>
+                <div id="2-5" class="letra-2" onclick=""></div>
 
                 <div id="3-1" class="letra-3"></div>
                 <div id="3-2" class="letra-3"></div>
@@ -66,7 +63,7 @@
             </div>
             
             <div class="keyboard">  
-                <div class="row-1">
+                <div class="keyboard-row">
                     <div class="tecla" id="key-q" onclick="addLetter('q')">Q</div>
                     <div class="tecla" id="key-w" onclick="addLetter('w')">W</div>
                     <div class="tecla" id="key-e" onclick="addLetter('e')">E</div>
@@ -77,10 +74,9 @@
                     <div class="tecla" id="key-i" onclick="addLetter('i')">I</div>
                     <div class="tecla" id="key-o" onclick="addLetter('o')">O</div>
                     <div class="tecla" id="key-p" onclick="addLetter('p')">P</div>
-                    <div class="tecla" id="key-p" onclick="restartGame()"></div>
                 </div>
 
-                <div class="row-2">
+                <div class="keyboard-row">
                     <div class="tecla" id="key-a" onclick="addLetter('a')">A</div>
                     <div class="tecla" id="key-s" onclick="addLetter('s')">S</div>
                     <div class="tecla" id="key-d" onclick="addLetter('d')">D</div>
@@ -93,7 +89,7 @@
                     <div class="tecla" onclick="delLetter()" style="width: fit-content; padding: 13px;"><i class="bi bi-backspace"></i></div>
                 </div>
 
-                <div class="row-3">
+                <div class="keyboard-row">
                     <div class="tecla" id="key-z" onclick="addLetter('z')">Z</div>
                     <div class="tecla" id="key-x" onclick="addLetter('x')">X</div>
                     <div class="tecla" id="key-c" onclick="addLetter('c')">C</div>
@@ -185,10 +181,10 @@
                         </div>
 
                         <div style="text-align: center; padding: 10px;">                            
-                            <div class="col-sm-3" id="matches" style="float: left;">a</div>
-                            <div class="col-sm-3" id="winRate" style="float: left;">a</div>
-                            <div class="col-sm-3" id="winStreak" style="float: left;">a</div>
-                            <div class="col-sm-3" id="maxStreak" style="float: left;">a</div>
+                            <div class="col-3" id="matches" style="float: left;">0</div>
+                            <div class="col-3" id="winRate" style="float: left;">0%</div>
+                            <div class="col-3" id="winStreak" style="float: left;">0</div>
+                            <div class="col-3" id="maxStreak" style="float: left;">0</div>
                         </div>
                 
                         <div class="modal-body" id="graphic" style="text-align: center;">
