--- a/index.html
+++ b/index.html
@@ -180,11 +180,18 @@
                             <button type="button" class="close" data-dismiss="modal" style="color: #fff;"><i class="bi bi-x-lg"></i></button>
                         </div>
 
-                        <div style="text-align: center; padding: 10px;">                            
+                        <div style="text-align: center; font-size: 19pt; margin-top: 10px;">                            
                             <div class="col-3" id="matches" style="float: left;">0</div>
                             <div class="col-3" id="winRate" style="float: left;">0%</div>
                             <div class="col-3" id="winStreak" style="float: left;">0</div>
                             <div class="col-3" id="maxStreak" style="float: left;">0</div>
+                        </div>
+
+                        <div style="text-align: center; font-size: 10pt;">                            
+                            <div class="col-3" style="float: left;">Partidas jogadas</div>
+                            <div class="col-3" style="float: left;">Taxa de vitórias</div>
+                            <div class="col-3" style="float: left;">Sequência atual</div>
+                            <div class="col-3" style="float: left;">Melhor sequência</div>
                         </div>
                 
                         <div class="modal-body" id="graphic" style="text-align: center;">
